--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "backend": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jerry",
@@ -14,5 +15,8 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "mongoose": "^6.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
